syntax = "proto3";

package score;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

import "org/tbk/bitcoin/txstats/example/score/tag.proto";

option java_package = "org.tbk.bitcoin.txstats.example.score";
option java_outer_classname = "ScoreProtos";
option java_multiple_files = true;

message AddressScoreInput {
    AddressInput address = 1;
    repeated google.protobuf.Any details = 2;
    map<string, google.protobuf.Value> additional_data = 3;
}

message AddressScoreAnalysis {
    string name = 1;
    string description = 2;
    AddressScore score = 3;
    ProviderInfo provider = 4;
    repeated AddressScoreContext contexts = 5;
    repeated AddressScoreAnalysis analyses = 6;
    map<string, google.protobuf.Value> additional_data = 7;
    repeated DebugMessage debug_message = 8;
}

message AddressScore {
    ScoreValue value = 1;
    repeated Tag tag = 2;
    ProviderInfo provider = 3;
    map<string, google.protobuf.Value> additional_data = 4;
    repeated DebugMessage debug_message = 5;
}


message AddressInput {
    string type = 1;
    string address = 2;
    map<string, google.protobuf.Value> additionalData = 3;
}

message ScoreValue {
    int32 value = 1;
    // All values MUST come with confidence property. This is a design decision.
    ScoreConfidence confidence = 2;
    map<string, google.protobuf.Value> additional_data = 3;
}

message ScoreConfidence {
    // All values should be between 0 and 99 when
    // generated by computer. Humans are allowed
    // to use whatever value they want.

    // Special values:
    // 0: a guess
    // 1: based on minimal data available
    // 2 - 98: typical range if you have more data
    // 99: i am 100% certain
    // 100: known fact
    // also humans can send these values to
    // < 0: "i have verified it - it is wrong (in my context)".
    // > 100: "i have verified it - it is true (in my context)".

    // 0 would mean you are totally unsure and it is just a guess
    // e.g. in case you have no data available. Many services
    // have a default value of 0 for their standard responses.
    // Implementation advice by default is to ignore such "guesses"
    // in the downstream pipeline.

    // 100 would mean the data you provided is a known fact.
    // this is hardly ever the case. Come on. Do not do that.
    // You may error if two contradicting "facts" are returned by different providers.
    int32 value = 1;

    map<string, google.protobuf.Value> additional_data = 2;
}

message ProviderInfo {
    string title = 1;
    string vendor = 2;
    string version = 3;
    map<string, google.protobuf.Value> additional_data = 4;
}

message AddressScoreContext {
    AddressScoreInput input = 1;
    ProviderInfo provider = 2;
    repeated google.protobuf.Any details = 3;
    map<string, google.protobuf.Value> additional_data = 4;
}

message DebugMessage {
    // This field will contain a generic message to be used to communicate any
    // extra information, such as in a scenario when no data is aggregated for a
    // small data slice due to privacy concerns.
    string debug_message = 1;
    map<string, google.protobuf.Value> additional_data = 2;
}
